assets/css/style.css
/* ... */
.TwitterCard .SummaryCard--small:not([data-card-breakpoints~=w400]) .SummaryCard-image,
.TwitterCard .SummaryCard--small .SummaryCard-image {
  width: 3rem;
  height: 3rem;
}
.TwitterCard .SummaryCard-content {
  padding: .25rem .75rem;
}
.timeline-Tweet-author {
  display: none;
}
.timeline-Tweet-media,
.timeline-Tweet-actions {
  margin-left: 0;
}
.timeline-Tweet-media {
  margin-bottom: 0;
}
.timeline-Tweet {
  padding: 5px;
}
.TwitterCard-title {
  display: inline-block;
}
.timeline-Tweet-action {
  font-size: 14px;
  margin-top: 2px;
}

/* .fancybox-slide--image .fancybox-content {
  background: #fff;
}
.fancybox-image {
  height: 95%;
  width: 95%;
} */

.bg-image.info {
  background-size: cover;
  height: auto;
  max-height: none;
}

@media (min-width: 576px) {
  .bg-image.info {
    height: 550px;
    /* max-height: 700px; */
  }
}
@media (min-width: 768px) {
  .bg-image.info {
    height: 650px;
    /* max-height: 700px; */
  }
}

@media (max-width: 575.9px) {
  .bg-image.info .header-sns-icons {
    padding-bottom: 5%;
    width: 40%;
  }
}
.info-p {
  background: rgba(255, 255, 255, .8);
  border-radius: .5rem;
  width: 85%;
}
@media (min-width: 576px) {
  .info-p {
    width: 80%;
  }
}
@media (max-width: 575.9px) {
  .info-p .container {
    padding-left: .75rem;
    padding-right: .75rem;
  }
}

.info-p p {
  line-height: 1.7;
}

.row.narrow {
  margin: auto;
  width: 90%;
}
.row.x-narrow-sm {
  justify-content: center;
}
@media (min-width: 576px) {
  .row.gallery-row {
    width: 80%;
  }
}
@media (min-width: 992px) {
  .row.narrow {
    width: 75%;
  }
  .row.gallery-row {
    width: 70%;
  }
}
.info-table {
  margin-top: 5%;
  margin-bottom: 5%;
}
@media (min-width: 576px) {
  .info-table {
    margin-top: 0;
    margin-bottom: 0;
  }
}
.info-table th {
  font-weight: normal;
  min-width: 6rem;
  vertical-align: top;
}
.row.gallery-row .col {
  padding-left: 2%;
  padding-right: 2%;
}
.row.gallery-nail .col {
  padding-left: 1%;
  padding-right: 1%;
}
.h-500 {
  height: 95vw;
}
@media (min-width: 576px) {
  .h-500 {
    height: 52vw;
  }
}
@media (min-width: 992px) {
  .h-500 {
    height: 28rem;
  }
}
@media (min-width: 1200px) {
  .h-500 {
    height: 550px;
  }
}
.card {
  margin-left: 2.2rem;
  width: 50%;
}
@media (min-width: 576px) {
  .payment {
    float: left;
    width: 65%;
  }
  .card {
    float: right;
    margin-left: 0;
    margin-top: .5rem;
    margin-right: 1%;
    max-width: 300px;
    width: 33%;
  }
}

.service-nail {
  border-color: #7a7a7a;
  border-style: solid;
  border-width: 6px 1px;
}

.nail-table th {
  font-weight: normal;
  min-width: 2rem;
  padding-right: .25rem;
  text-align: right;
  vertical-align: top;
}

@media (min-width: 992px) {
  .message-p {
    min-width: 42em;
  }
}

.staff-list .narrow {
  max-width: 500px;
}
.staff-list .staff-img {
  height: 80px;
  margin: 0 auto;
  width: 106px;
}
.staff-list .staff-img img {
  width: 12px;
}
.staff-list .staff-img .insta-icon-link {
  margin-bottom: 2px;
}
.staff-list h3 span,
.staff-list .font-size-small {
  font-size: x-small;
}
.staff-list .font-size-12 {
  font-size: xx-small;
}

@media (min-width: 992px) {
  .row.narrow.narrow-sm {
    width: 50%;
  }
}

.bg-image.nail {
  background-size: cover;
  background-image: url(../images/nail/nail_bg.png);
  background-position: left bottom;
  height: 60vw;
  max-height: 700px;
  width: 100%;
}
.bg-mask {
  margin-top: -40vw;
  height: 100%;
}
.height-120 {
  height: 57px;
}
@media (min-width: 576px) {
  .bg-mask {
    margin-top: -50vw;
  }
}
@media (min-width: 768px) {
  /* .bg-mask {
    margin-top: -52.5%;
  } */
}
@media (min-width: 992px) {
  /* .bg-mask {
    margin-top: -500px;
  } */
}
@media (min-width: 1200px) {
  .bg-mask {
    margin-top: -600px;
  }
}

h3.noborder {
  border-bottom: 0;
  text-align: center;
}

/* .fancybox-button {
  background: rgba(250, 250, 250, .5);
  color: #555;
}
.fancybox-button:hover {
  color: #666;
}
.fancybox-button[disabled], .fancybox-button[disabled]:hover {
  color: #aaa;
} */
@media (min-width: 992px) {
  .fancybox-content {
    max-width: 75%;
  }
}
.instagram_gallery {
  display: flex;
}
.instagram_gallery a {
  display: block;
  position: relative;
  position: relative;
  width: 31.3333333333332%;
  margin: 1%;
}
#instagram-feed-staff .instagram_gallery a {
  display: block;
  position: relative;
  position: relative;
  width: 24%;
  margin: 1%;
}
.instagram_gallery a img {
  max-width: 100%;
}
.instagram-sidecar:before {
  content: url(../images/icon/ig-gallery.png);
  position: absolute;
  top: 0;
  right: 4px;
}

